// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormButtons Rendering Render the FormButtons component with default props 1`] = `
<div
  className="FormButtons"
>
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Cancel"
  />
  <FormSubmit
    id="formSubmit"
    text="Save"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the beginning 1`] = `
<div
  className="FormButtons test_cn"
>
  <Button
    onClick={[Function]}
    text="Button at start"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the beginning 2`] = `
<div
  className="FormButtons test_cn"
>
  <Button
    onClick={[Function]}
    text="Button at start"
  />
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
</div>
`;

exports[`FormButtons Rendering Render the FormButtons component with props, children position at the end 1`] = `
<div
  className="FormButtons test_cn"
>
  <Button
    id="formCancel"
    onClick={[Function]}
    text="Abort"
  />
  <FormSubmit
    id="formSubmit"
    text="Submit"
  />
  <Button
    onClick={[Function]}
    text="Button at start"
  />
</div>
`;
